--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         tools:targetApi="31">
         <activity android:name=".auth.LoginActivity" android:exported="false" />
         <activity android:name=".auth.RegisterActivity" android:exported="false" />
+        <activity android:name=".FavoriteFilmsActivity" android:exported="false" />
 
         <activity
             android:name=".Activity.SeatListActivity"
